Fix visualization on mobile

--- a/frontend/src/app/components/neovis/neovis.component.css
+++ b/frontend/src/app/components/neovis/neovis.component.css
@@ -10,3 +10,9 @@
 i {
     cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+    i {
+        display: none;
+    }
+}
